--- a/frontend_app/package.json
+++ b/frontend_app/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.0",
+    "@supabase/supabase-js": "^2.44.0",
     "express": "^4.18.2",
     "ngx-perfect-scrollbar": "^10.1.1",
     "ngx-scrollbar": "^14.1.0",
